--- a/qiskit-textbook/textbook/1-atoms-computation.ipynb
+++ b/qiskit-textbook/textbook/1-atoms-computation.ipynb
@@ -46,11 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'qiskit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/mk/learning/qandbox/qiskit-textbook/textbook/1-atoms-computation.ipynb セル 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mk/learning/qandbox/qiskit-textbook/textbook/1-atoms-computation.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m \u001b[39mimport\u001b[39;00m QuantumCircuit, assemble, Aer\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mk/learning/qandbox/qiskit-textbook/textbook/1-atoms-computation.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvisualization\u001b[39;00m \u001b[39mimport\u001b[39;00m plot_histogram\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'qiskit'"
+     ]
+    }
+   ],
    "source": [
-    "from qiskit import QuantumCircuit, assemble, Aer\n",
+    "Afrom qiskit import QuantumCircuit, assemble, Aer\n",
     "from qiskit.visualization import plot_histogram"
    ]
   },
@@ -1070,7 +1082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.0"
   },
   "vscode": {
    "interpreter": {
